# essentials-of-compilation

./: 2  Cargo.toml  Makefile  nohup.out  res
app/: Cargo.toml
app/src/cli/: lif.rs  lint.rs  lvar.rs  mod.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
chapter1/: Cargo.toml
chapter1/src/: eval.rs  examples.rs  lib.rs
chapter1/src/l_int/: errors.rs  eval.rs  exp.rs  functions.rs  mod.rs  stmt.rs
chapter1/src/parser/: errors.rs  lexer.rs  mod.rs
chapter1/src/syntax/: exp.rs  mod.rs  ops.rs  stmt.rs
chapter2/: Cargo.toml
chapter2/src/: assemble.rs  compile.rs  examples.rs  lib.rs  prelude_conclusion.rs
chapter2/src/assign_homes/: arg.rs  instr.rs  mod.rs  prog.rs  reg.rs
chapter2/src/c_var/: atm.rs  exp.rs  mod.rs  prog.rs  stmt.rs  tail.rs  typecheck.rs
chapter2/src/explicate_control/: atm.rs  exp.rs  mod.rs  prog.rs
chapter2/src/l_var/: errors.rs  eval.rs  mod.rs  remove_complex_operands.rs  subst.rs  syntax.rs  x86_int.rs
chapter2/src/l_var2l_var_reduced/: exp.rs  mod.rs  ops.rs  prog.rs
chapter2/src/l_var_reduced/: atm.rs  exp.rs  mod.rs  stmt.rs
chapter2/src/parser/: errors.rs  keywords.rs  mod.rs
chapter2/src/patch_instructions/: instr.rs  prog.rs
chapter2/src/reduce/: errors.rs  exp.rs  mod.rs  prog.rs  stmt.rs
chapter2/src/remove_complex_operands/: ops.rs
chapter2/src/select_instructions/: atm.rs  exp.rs  mod.rs  prog.rs  stmt.rs  tail.rs
chapter2/src/x86_int/: arg.rs  instr.rs  mod.rs  patch_instructions.rs  prelude_conclusion.rs  reg.rs
chapter2/src/x86_var/: arg.rs  instr.rs  mod.rs
chapter3/: Cargo.toml
chapter3/src/: assign_homes.rs  compile.rs  lib.rs  patch_instructions.rs  prelude_conclusion.rs  remove_vars.rs
chapter3/src/color_graph/: assign_registers.rs  mod.rs  registers_colors.rs
chapter3/src/parser/: digits.rs  (+6 more)
chapter4/: Cargo.toml
chapter4/src/: check.rs  errors.rs  eval.rs  lib.rs  remove_vars.rs
driver/src/: consts.rs  l_if.rs  l_int.rs  l_var.rs  l_var_reg.rs  lib.rs
examples/: let_sum1.lang  let_sum2.lang  sub.lang  sum2.lang
examples/and_true/: and_true.lang
examples/if_and/: if_and.lang
examples/if_nested/: if_nested.lang
examples/if_tail/: if_tail.lang
examples/l_int/: neg_sum.lint  sum_5.lint  sum_read.lint
examples/l_var/: let_ab.lvar
examples/let_shadow/: let_shadow.lang
examples/let_sum1/: let_sum1.lang
examples/let_sum2/: let_sum2.lang
examples/set_inc/: set_inc.lang
examples/sub/: sub.lang
examples/sum1/: sum1.lang
examples/sum2/: sum2.lang
examples/tup_42/: tup_42.lang
examples/tup_assign/: tup_assign.lang
examples/tup_mixed/: tup_mixed.lang
examples/tup_ref/: tup_ref.lang
examples/while_false/: while_false.lang
examples/while_once/: while_once.lang
examples/while_range/: while_range.lang
include/: runtime.c  runtime.h
lib/asm/: Cargo.toml
lib/assign_homes/: Cargo.toml
lib/color_graph/: Cargo.toml
lib/compile/: Cargo.toml
lib/compile/src/: errors.rs  lib.rs  paths.rs  pipeline.rs
lib/compile/src/passes/: assemble.rs  assign_homes.rs  build_flow_graph.rs  build_graph.rs  build_interference_graph.rs  color_graph.rs  explicate_control.rs  generate_prelude_conclusion.rs  mod.rs  parse.rs  patch_instructions.rs  remove_complex_operands.rs  select_instructions.rs  typecheck.rs  uncover_live.rs  uniquify.rs
lib/core/: Cargo.toml
lib/core2asm/: Cargo.toml
lib/core2lang_x86var/: Cargo.toml
lib/definitions/: Cargo.toml
lib/driver/: Cargo.toml
lib/driver/src/: errors.rs  lib.rs  paths.rs  pipeline.rs
lib/driver/src/passes/: assemble.rs  assign_homes.rs  build_flow_graph.rs  build_interference_graph.rs  color_graph.rs  explicate_control.rs  generate_prelude_conclusion.rs  link.rs  mod.rs  parse.rs  patch_instructions.rs  remove_complex_operands.rs  select_instructions.rs  typecheck.rs  uncover_live.rs  uniquify.rs
lib/explicate_control/: Cargo.toml
lib/generate_prelude_conclusion/: Cargo.toml
lib/interference_graph/: Cargo.toml
lib/lang/: Cargo.toml
lib/lang2lang_mon/: Cargo.toml
lib/lang_c/: Cargo.toml
lib/lang_c2lang_x86var/: Cargo.toml
lib/lang_mon/: Cargo.toml
lib/lang_mon2lang_c/: Cargo.toml
lib/lang_x86/: Cargo.toml
lib/monadic/: Cargo.toml
lib/monadic2core/: Cargo.toml
lib/monadic2lang_c/: Cargo.toml
lib/parser/: Cargo.toml  lang.pest
lib/patch_instructions/: Cargo.toml
lib/register_allocation/: Cargo.toml
lib/remove_complex_operands/: Cargo.toml
lib/select_instructions/: Cargo.toml
lib/surface/: Cargo.toml
lib/surface2lang_mon/: Cargo.toml
lib/surface2monadic/: Cargo.toml
lib/syntax/: Cargo.toml
lib/test_utils/: Cargo.toml
lib/typecheck/: Cargo.toml
lib/uncover_live/: Cargo.toml
lib/uniquify/: Cargo.toml
main/: Cargo.toml
main/src/: main.rs
main/src/cli/: file_io.rs  lint.rs
old/: Cargo.toml  Makefile  README.md
old/app/: Cargo.toml
old/app/src/: main.rs
old/app/src/cli/: lif.rs  lint.rs  lvar.rs  mod.rs
old/chapter2/: Cargo.toml
old/driver/: Cargo.toml
old/testsuite/: Cargo.toml
s_exp/: Cargo.toml
s_exp/src/: errors.rs  l_int.rs  lib.rs  s_exp.rs
tests/: Cargo.toml  compile_examples.rs  examples.rs  parse_examples.rs
testsuite/: Cargo.toml
testsuite/src/: main.rs
todo/if_assign/: if_assign.lang
(+328 files in other folders)
