[workspace]
members = [
  "apps/cli",
  "lib/test_utils",
  "lib/definitions",
  "lib/surface",
  "lib/monadic",
  "lib/lang_c",
  "lib/lang_x86",
  "lib/parser",
  "lib/surface2monadic",
  "lib/monadic2lang_c",
  "lib/lang_c2lang_x86var",
  "lib/register_allocation",
  "lib/driver",
  "tests"
]

resolver="2"
default-members=["apps/cli"]
