[workspace]
members = [
  "apps/cli",
  "lib/test_utils",
  "lib/definitions",
  "lib/surface",
  "lib/monadic",
  "lib/core",
  "lib/asm",
  "lib/parser",
  "lib/surface2monadic",
  "lib/monadic2core",
  "lib/core2lang_x86var",
  "lib/register_allocation",
  "lib/driver",
  "tests"
]

resolver="2"
default-members=["apps/cli"]
