[package]
name = "essentials-main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "essentials"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chapter1 = {path="../chapter1"}
chapter2 = {path="../chapter2"}
chapter3 = {path="../chapter3"}
chapter4 = {path="../chapter4"}
