[package]
name="tests"
version="0.0.1"
edition="2024"

[[test]]
name="compile_examples"
path="compile_examples.rs"
harness=false

[[test]]
name="parse_examples"
path="parse_examples.rs"
harness=false

[dependencies]
parser = { path = "../lib/parser" }
driver = { path = "../lib/driver" }
test_utils = { path = "../lib/test_utils" }
