[package]
name="compile"
version="0.0.1"
edition="2024"

[dependencies]
parser = { path="../parser" }
syntax = { path="../syntax" }
uniquify = { path="../uniquify" }
typecheck = { path="../typecheck" } 
remove_complex_operands = { path="../remove_complex_operands" }
explicate_control = { path="../explicate_control" }
select_instructions = { path="../select_instructions" }
assign_homes = { path="../assign_homes" }
patch_instructions = { path="../patch_instructions" }
generate_prelude_conclusion = { path="../generate_prelude_conclusion" }
