[package]
name="driver"
version="0.0.1"
edition="2024"

[dependencies]
definitions={ path="../definitions" }
surface = { path="../surface" }
monadic = { path="../monadic" }
core = { path="../core" }
asm = { path="../asm" }
surface2monadic = { path="../surface2monadic" }
monadic2core= { path="../monadic2core" }
core2lang_x86var = { path="../core2lang_x86var" }
parser = { path="../parser" }
register_allocation = { path="../register_allocation" }
